Migrate to Java 11 #85